k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: major-website-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: major-website
  template:
    metadata:
      labels:
        app: major-website
    spec:
      containers:
        - name: frontend
          image: himanshupradhan/major-website:<TAG>
          imagePullPolicy: Always
          ports:
            - containerPort: 80
