k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: major-website-services
spec:
  selector:
    app: major-website
  ports:
    - name: website
      protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
